--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "classnames": "^2.2.6",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
