--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "next": "9.3.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.2.0"
   }
 }
